--- a/branching.html
+++ b/branching.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>branching experiment</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h1>This is a branching test</h1>
